plugins {
	id 'org.springframework.boot' version '2.7.2'
	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
	id 'java'
}

group = 'com.chefcompany'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation:2.3.0.RELEASE'

	// DB
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cloud-connectors', version: '2.2.13.RELEASE'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'

	// JWT
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
	implementation group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: '4.0.0'
	implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.2.3-1'

	// Rabbit
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
	testImplementation 'io.projectreactor:reactor-test'
}

test {
	useJUnitPlatform()
}
